--- a/app/views/main.html
+++ b/app/views/main.html
@@ -4,7 +4,7 @@
 
         <li>
 <!--           <div class="overlay"></div>-->
-            <img src="/images/pomp.jpeg">
+            <img src="/images/pomp.jpg">
             <!-- random image -->
             <div class="caption center-align">
                 <h3>Peace of Mind Painting</h3>
@@ -13,7 +13,7 @@
         </li>
 
         <li>
-            <img src="/images/interior.jpeg">
+            <img src="/images/interior.jpg">
             <!-- random image -->
             <div class="caption right-align">
                 <h3>Interior</h3>
@@ -21,7 +21,7 @@
             </div>
         </li>
         <li>
-            <img src="/images/exterior-paint-door.jpeg">
+            <img src="/images/exterior-paint-door.jpg">
             <!-- random image -->
             <div class="caption left-align">
                 <h3>Exterior</h3>
@@ -29,7 +29,7 @@
             </div>
         </li>
         <li>
-            <img src="/images/more.jpeg">
+            <img src="/images/more.jpg">
             <!-- random image -->
             <div class="caption center-align">
                 <h3>And so much more!</h3>
@@ -43,7 +43,7 @@
     <h1>Peace of Mind Painting</h1>
     <p>Serving the greater Knoxville, Tennessee communities, Peace of Mind Painting is dedicated to delivering a professional, skilled, and valuable experience while bridging the gap between the QUALITY you desire and the VALUE you deserve. We have the knowledge required to successfully navigate each stage of your painting project. Precision residential interior and exterior finishes combined with commercial experience makes Peace of Mind Painting your go-to company for all your painting needs.
         <br>
-        <p class="call">CALL TODAY TO SCHEDULE A FREE ESTIMATE!</p>
+        <p class="call">CALL TODAY TO SCHEDULE A FREE ESTIMATE AT 865-279-0608!</p>
     </p>
 </div>
 
