--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -101,6 +101,14 @@ nav {
   padding-right: 5%;
   background-color: #3D5946; }
 
+html {
+  overflow: hidden;
+  height: 100%; }
+
+body {
+  height: 100%;
+  overflow: auto; }
+
 .overlay {
   background-color: rgba(0, 0, 0, 0.5);
   position: absolute;
@@ -108,8 +116,31 @@ nav {
   height: 60vh;
   z-index: 998; }
 
+.contain {
+  width: 100%;
+  height: 100vh;
+  position: relative; }
+  .contain .content {
+    height: auto;
+    width: auto;
+    text-align: center;
+    position: relative;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%); }
+    .contain .content i {
+      font-size: 3em;
+      color: #A6A5A1; }
+    .contain .content h1 {
+      font-size: 1.5em;
+      color: #3D5946;
+      margin: 0; }
+    .contain .content h2 {
+      font-size: 1.1em;
+      color: #A6A5A1; }
+
 .slider {
-  height: 70vh !important; }
+  height: 65vh !important; }
   .slider .slides {
     height: 60vh !important; }
     .slider .slides h3 {
@@ -156,12 +187,20 @@ footer {
   width: 100%;
   height: auto;
   background-color: #3D5946; }
+  footer input:focus {
+    border-bottom: 1px solid white !important; }
+  footer textarea:focus {
+    border-bottom: 1px solid white !important; }
+  footer .active {
+    color: white !important; }
   footer .prefix {
     color: white; }
   footer .prefix.active {
     color: #67809F; }
-  footer .input {
-    border-bottom: 1px solid white; }
+  footer input {
+    color: white; }
+  footer textarea {
+    color: white; }
   footer .submit {
     background-color: #3D5946;
     border: 1px solid white;
@@ -170,12 +209,31 @@ footer {
     position: relative;
     left: 50%;
     transform: translateX(-50%); }
+  footer .submit:hover {
+    background-color: white;
+    color: #3D5946; }
   footer i {
     font-size: 2em;
     display: inline-block; }
-  footer .copyright {
+  footer .connect ul {
+    height: 100%; }
+  footer .connect .info {
+    color: white;
+    font-size: 1.1em;
+    white-space: nowrap; }
+  footer .connect li {
+    position: relative;
+    display: inline-block;
+    float: left;
+    margin: 1em; }
+    footer .connect li i {
+      font-size: 4em; }
+  footer .footer-copyright {
     width: 100%;
-    padding: 0 1em; }
+    padding: 0 1em;
+    color: white;
+    margin-top: 3em;
+    text-align: center; }
 
 @media only screen and (max-width: 993px) {
   .crew .card-content {
