--- a/app/views/main.html
+++ b/app/views/main.html
@@ -17,7 +17,7 @@
             <!-- random image -->
             <div class="caption right-align">
                 <h3>Interior</h3>
-                <h5 class="light grey-text text-lighten-3">Here's our small slogan.</h5>
+                <h5 class="light grey-text text-lighten-3">Transforming your living spaces to life!</h5>
             </div>
         </li>
         <li>
@@ -25,7 +25,7 @@
             <!-- random image -->
             <div class="caption left-align">
                 <h3>Exterior</h3>
-                <h5 class="light grey-text text-lighten-3">Here's our small slogan.</h5>
+                <h5 class="light grey-text text-lighten-3">Coating your home in beauty for years to come!</h5>
             </div>
         </li>
         <li>
@@ -41,6 +41,7 @@
 
 <div class="container bio">
     <h1>Peace of Mind Painting</h1>
+    <h4>Done right <i>every</i> time!</h4>
     <p>Serving the greater Knoxville, Tennessee communities, Peace of Mind Painting is dedicated to delivering a professional, skilled, and valuable experience while bridging the gap between the QUALITY you desire and the VALUE you deserve. We have the knowledge required to successfully navigate each stage of your painting project. Precision residential interior and exterior finishes combined with commercial experience makes Peace of Mind Painting your go-to company for all your painting needs.
         <br>
         <p class="call">CALL TODAY TO SCHEDULE A FREE ESTIMATE AT 865-279-0608!</p>
@@ -58,12 +59,12 @@
         <div class="col s12 m4 skill">
             <span><i class="ion-briefcase"></i></span>
             <h1>Skilled</h1>
-            <p>Peace of Mind Painting is a professional painting service. We will set your mind at ease by handling all matters in a professional manner.</p>
+            <p>Boasting over 20 years experience in the painting field, rest assured that Peace of Mind Painting commands the skills necessary for every step of your painting project.</p>
         </div>
         <div class="col s12 m4 skill">
             <span><i class="ion-social-usd"></i></span>
             <h1>Valuable</h1>
-            <p>Peace of Mind Painting is a professional painting service. We will set your mind at ease by handling all matters in a professional manner.</p>
+            <p>You get what you pay for. Paying for us to do it right won't break the bank! OUr work is performed at a fair rate and is sure to last for years to come. A great value!</p>
         </div>
 
     </div>
