--- a/app/views/services.html
+++ b/app/views/services.html
@@ -11,13 +11,13 @@
                <h3>We're really good at painting...</h3>
                <h5>but we can also help with the following:</h5>
                <ul>
+                   <li>Custom Interior Finishes</li>
+                   <li>Vibrant Exterior Coatings</li>
+                   <li>Deck and Fence Refinishing</li>
+                   <li>Custom Stain Work</li>
                    <li>Wallpaper Removal</li>
-                   <li>Remodels</li>
-                   <li>Fence Refinishing</li>
-                   <li>New Construction</li>
-                   <li>Interior</li>
-                   <li>Exterior</li>
-                   <li>Sheetrock Repair</li>
+                   <li>New Construction and Remodel</li>
+                   <li>Sheetrock Repair and Refinishing</li>
                </ul>
            </div>
        </div>
