--- a/app/views/testimonials.html
+++ b/app/views/testimonials.html
@@ -18,7 +18,7 @@
             </div>
             <div class="col s12 m6 detail">
                 <h4>Heather McPherson Story</h4>
-                <p>Full disclosure ... I'm a perfectionist. At least I thought I was until Scott painted my sun room! He found flaws I didn't see and made sure the finished job was as flawless as it could possibly be. He's polite, professional, responsive and extremely neat and tidy in his work. No paint splatters let for me to attend to, no overrun onto floors or windows. He was great about letting me know when he would be here and met every commitment. In short ... I'll never paint another room myself again! Did I mention honest to the core? I'd hire him again in a skinny minute!</p>
+                <p>Full disclosure ... I'm a perfectionist. At least I thought I was until Scott painted my sun room! He found flaws I didn't see and made sure the finished job was as flawless as it could possibly be. He's polite, professional, responsive and extremely neat and tidy in his work. No paint splatters left for me to attend to, no overrun onto floors or windows. He was great about letting me know when he would be here and met every commitment. In short ... I'll never paint another room myself again! Did I mention honest to the core? I'd hire him again in a skinny minute!</p>
             </div>
         </div>
 
