--- a/app/views/main.html
+++ b/app/views/main.html
@@ -64,7 +64,7 @@
         <div class="col s12 m4 skill">
             <span><i class="ion-social-usd"></i></span>
             <h1>Valuable</h1>
-            <p>You get what you pay for. Paying for us to do it right won't break the bank! OUr work is performed at a fair rate and is sure to last for years to come. A great value!</p>
+            <p>You get what you pay for. Paying for us to do it right won't break the bank! Our work is performed at a fair rate and is sure to last for years to come. A great value!</p>
         </div>
 
     </div>
@@ -80,7 +80,7 @@
                     <span class="card-title">Scott Froelich: Owner & Operator</span>
                 </div>
                 <div class="card-content">
-                    <p>Scott brings to your project over ten years experience in the painting industry. His attention to detail and meticulous practices set him apart in the painting community. Expect clear and timely communication and an eagerness to listen in order to successfully complete your project according to your vision. Scott lives in the Gibbs community of Knoxville, TN with his loving wife and three wonderful children.</p>
+                    <p>Scott brings to your project over ten years experience in the painting industry. His attention to detail and meticulous practices set him apart in the painting community. Expect clear and timely communication and an eagerness to listen in order to successfully complete your project according to your vision.</p>
                 </div>
             </div>
         </div>
@@ -91,7 +91,7 @@
                     <span class="card-title">Joe Kitson</span>
                 </div>
                 <div class="card-content">
-                    <p>At 28 Joe has already 10+years experience as a painter. In middle school he worked for a painting contractor all the way through college years. With industrial experience and several of his own clientele, Joe has learned through the years that consistent quality and dependability are the keystones of private sector success. </p>
+                    <p>Joe also has over 10 years experience as a painter. Beginning in middle school, he worked for a painting contractor and continued all the way through his college years. With industrial experience and several of his own residential clients, Joe has learned that consistent quality and dependability are the keystones to success. </p>
                 </div>
             </div>
         </div>
