--- a/app/views/work.html
+++ b/app/views/work.html
@@ -1,7 +1,7 @@
 <!-- Work Page -->
 <div class="work container">
 
-    <!--------------- Indoor Collage --------------->
+    <!--------------- Interior Collage --------------->
 
     <h2>Indoor Gallery</h2>
     <!-- Tall -->
@@ -42,7 +42,7 @@
 
     <!--------------- Outdoor Collage --------------->
 
-    <h2 class="outdoor">Outdoor Gallery</h2>
+    <h2 class="outdoor">Exterior Gallery</h2>
     <!-- Tall -->
     <div class="row">
         <div class="col s12 m6 tall" id="exterior-1"></div>
