--- a/app/scss/_work.scss
+++ b/app/scss/_work.scss
@@ -30,6 +30,7 @@
     }
     .wide {
         height: 70vh;
+
     }
     #interior-1 {
         background-image: url(/images/interior-1.jpg)
@@ -42,6 +43,43 @@
     }
     #interior-4 {
         background-image: url(/images/interior-4.jpg)
+    }
+    #interior-6 {
+        background-image: url(/images/interior-6.jpg)
+    }
+    #interior-7 {
+        background-image: url(/images/interior-7.jpg)
+    }
+    #interior-8 {
+        background-image: url(/images/interior-8.jpg)
+    }
+    #interior-9 {
+        background-image: url(/images/interior-9.jpg)
+    }
+    #interior-5 {
+        background-image: url(/images/interior-5.jpg)
+    }
+    #interior-10 {
+        background-image: url(/images/interior-10.jpg)
+    }
+    #interior-11 {
+        background-image: url(/images/interior-11.jpg)
+    }
+    #interior-12 {
+        background-image: url(/images/interior-12.jpg)
+    }
+    #interior-13 {
+        background-image: url(/images/interior-13.jpg)
+    }
+    #interior-14 {
+        background-image: url(/images/interior-14.jpg)
+    }
+    #interior-15 {
+        background-image: url(/images/interior-15.jpg)
+    }
+    #interior-16 {
+        background-image: url(/images/interior-16.jpg)
+
     }
     #remodel-1 {
         background-image: url(/images/remodel-1.jpg)
@@ -64,27 +102,35 @@
     #exterior-1 {
         background-image: url(/images/exterior-1.jpg)
     }
-      #exterior-3 {
+    #exterior-3 {
         background-image: url(/images/exterior-3.jpg)
     }
-      #fence-1 {
+    #fence-1 {
         background-image: url(/images/fence-1.jpg)
     }
-      #fence-2 {
+    #fence-2 {
         background-image: url(/images/fence-2.jpg)
     }
-      #exterior-2 {
+    #exterior-2 {
         background-image: url(/images/exterior-2.jpg)
     }
-      #exterior-4 {
+    #exterior-4 {
         background-image: url(/images/exterior-4.jpg)
     }
-      #fence-3 {
+    #exterior-5 {
+        background-image: url(/images/exterior-5.jpg)
+    }
+    #exterior-6 {
+        background-image: url(/images/exterior-6.jpg)
+    }
+    #exterior-7 {
+        background-image: url(/images/exterior-7.jpg)
+
+    }
+    #fence-3 {
         background-image: url(/images/fence-3.jpg)
     }
-      #fence-4 {
+    #fence-4 {
         background-image: url(/images/fence-4.jpg)
     }
 }
-
-
