--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -31,6 +31,30 @@
     background-image: url(/images/interior-3.jpg); }
   .work #interior-4 {
     background-image: url(/images/interior-4.jpg); }
+  .work #interior-6 {
+    background-image: url(/images/interior-6.jpg); }
+  .work #interior-7 {
+    background-image: url(/images/interior-7.jpg); }
+  .work #interior-8 {
+    background-image: url(/images/interior-8.jpg); }
+  .work #interior-9 {
+    background-image: url(/images/interior-9.jpg); }
+  .work #interior-5 {
+    background-image: url(/images/interior-5.jpg); }
+  .work #interior-10 {
+    background-image: url(/images/interior-10.jpg); }
+  .work #interior-11 {
+    background-image: url(/images/interior-11.jpg); }
+  .work #interior-12 {
+    background-image: url(/images/interior-12.jpg); }
+  .work #interior-13 {
+    background-image: url(/images/interior-13.jpg); }
+  .work #interior-14 {
+    background-image: url(/images/interior-14.jpg); }
+  .work #interior-15 {
+    background-image: url(/images/interior-15.jpg); }
+  .work #interior-16 {
+    background-image: url(/images/interior-16.jpg); }
   .work #remodel-1 {
     background-image: url(/images/remodel-1.jpg); }
   .work #remodel-2 {
@@ -55,6 +79,12 @@
     background-image: url(/images/exterior-2.jpg); }
   .work #exterior-4 {
     background-image: url(/images/exterior-4.jpg); }
+  .work #exterior-5 {
+    background-image: url(/images/exterior-5.jpg); }
+  .work #exterior-6 {
+    background-image: url(/images/exterior-6.jpg); }
+  .work #exterior-7 {
+    background-image: url(/images/exterior-7.jpg); }
   .work #fence-3 {
     background-image: url(/images/fence-3.jpg); }
   .work #fence-4 {
