--- a/app/views/work.html
+++ b/app/views/work.html
@@ -40,6 +40,52 @@
 
 
 
+
+    <!-- Tall -->
+     <div class="row">
+        <div class="col s12 m6 tall" id="interior-6"></div>
+        <div class="col s12 m6 tall" id="interior-7"></div>
+    </div>
+
+    <!-- Split Short -->
+    <div class="row">
+        <div class="col s12 m6 short" id="interior-8"></div>
+        <div class="col s12 m6 short" id="interior-9"></div>
+    </div>
+
+    <!-- Wide -->
+    <div class="row">
+        <div class="col s12 wide" id="interior-5"></div>
+    </div>
+
+
+
+    <!-- Split Short -->
+    <div class="row">
+        <div class="col s12 m6 short" id="interior-10"></div>
+        <div class="col s12 m6 short" id="interior-11"></div>
+    </div>
+
+    <!-- Tall -->
+    <div class="row">
+        <div class="col s12 m6 tall" id="interior-12"></div>
+        <div class="col s12 m6 tall" id="interior-13"></div>
+    </div>
+    <!-- Tall -->
+    <div class="row">
+        <div class="col s12 m6 tall" id="interior-14"></div>
+        <div class="col s12 m6 tall" id="interior-15"></div>
+    </div>
+
+       <!-- Wide -->
+    <div class="row">
+        <div class="col s12 wide" id="interior-16"></div>
+    </div>
+
+
+
+
+
     <!--------------- Outdoor Collage --------------->
 
     <h2 class="outdoor">Exterior Gallery</h2>
@@ -71,13 +117,19 @@
         <div class="col s12 m6 short" id="fence-4"></div>
     </div>
 
-    <!-- Tall -->
-<!--
+
+
+
+<!-- Tall -->
     <div class="row">
-        <div class="col s12 m6 tall" id="interior-3"></div>
-        <div class="col s12 m6 tall" id="interior-4"></div>
+        <div class="col s12 m6 tall" id="exterior-5"></div>
+        <div class="col s12 m6 tall" id="exterior-6"></div>
     </div>
--->
+
+    <!-- Wide -->
+    <div class="row">
+        <div class="col s12 wide" id="exterior-7"></div>
+    </div>
 
 
 
