updated indoor to interior

--- a/app/views/work.html
+++ b/app/views/work.html
@@ -3,7 +3,7 @@
 
     <!--------------- Interior Collage --------------->
 
-    <h2>Indoor Gallery</h2>
+    <h2>Interior Gallery</h2>
     <!-- Tall -->
     <div class="row">
         <div class="col s12 m6 tall" id="interior-1"></div>
