updating photo gallery

--- a/app/scss/_work.scss
+++ b/app/scss/_work.scss
@@ -133,4 +133,36 @@
     #fence-4 {
         background-image: url(/images/fence-4.jpg)
     }
+    #rail-before1 {
+        background-image: url(/images/rail-before1.jpg)
+    }
+    #rail-before2 {
+          background-image: url(/images/rail-before2.jpg)
+    }
+    #rail-before3 {
+          background-image: url(/images/rail-before3.jpg)
+    }
+    #rail-after {
+        background-image: url(/images/rail-after.jpg)
+    }
+    #pool-before {
+        background-image: url(/images/pool-before.jpg)
+    }
+     #pool-after1 {
+        background-image: url(/images/pool-after1.jpg)
+    }
+     #pool-after2 {
+        background-image: url(/images/pool-after2.jpg)
+    }
+     #pool-after3 {
+        background-image: url(/images/pool-after3.jpg)
+    }
+      #black-door-beforeandafter {
+        background-image: url(/images/black-door-beforeandafter.jpg)
+    }
+     #red-door-beforeandafter {
+        background-image: url(/images/red-door-beforeandafter.jpg)
+    }
+
+
 }
