--- a/app/views/work.html
+++ b/app/views/work.html
@@ -82,6 +82,17 @@
         <div class="col s12 wide" id="interior-16"></div>
     </div>
 
+     <!-- Tall -->
+      <div class="row">
+        <div class="col s12 m6 tall" id="rail-before1"></div>
+        <div class="col s12 m6 tall" id="rail-before2"></div>
+    </div>
+
+      <div class="row">
+        <div class="col s12 m6 tall" id="rail-before3"></div>
+        <div class="col s12 m6 tall" id="rail-after"></div>
+    </div>
+
 
 
 
@@ -131,7 +142,25 @@
         <div class="col s12 wide" id="exterior-7"></div>
     </div>
 
+<!-- Tall -->
+    <div class="row">
+        <div class="col s12 m6 tall" id="pool-before"></div>
+        <div class="col s12 m6 tall" id="pool-after1"></div>
+    </div>
 
+    <div class="row">
+        <div class="col s12 m6 tall" id="pool-after2"></div>
+        <div class="col s12 m6 tall" id="pool-after3"></div>
+    </div>
+
+      <!-- Wide -->
+    <div class="row">
+        <div class="col s12 wide" id="black-door-beforeandafter"></div>
+    </div>
+
+    <div class="row">
+        <div class="col s12 wide" id="red-door-beforeandafter"></div>
+    </div>
 
 
 
