--- a/app/scss/_work.scss
+++ b/app/scss/_work.scss
@@ -2,6 +2,9 @@
 .gridster-item {
     z-index: auto;
 }
+.interior-grid {
+    margin-bottom: 8em;
+}
 .work {
     min-height: 100vh;
     text-align: center;
