--- a/app/views/main.html
+++ b/app/views/main.html
@@ -87,7 +87,7 @@
         <div class="col s12 l6">
             <div class="card large">
                 <div class="card-image">
-                    <img src="images/joe.jpg">
+                    <img src="images/joe-new.jpg">
                     <span class="card-title">Joe Kitson</span>
                 </div>
                 <div class="card-content">
