--- a/app/views/work.html
+++ b/app/views/work.html
@@ -2,6 +2,7 @@
 <div class="work container">
 
    <!-- Only shown while editing -->
+<!--
     <div ng-if="editing">
         <label for="">path</label>
         <input type="text" name="" id="" ng-model="new.photoPath">
@@ -13,11 +14,12 @@
             </li>
         </ul>
     </div>
+-->
 
    <h2 ng-show="loaded">Interior</h2>
 
     <!-- Interior Grid dont touch -->
-    <div gridster="gridsterOpts" class="interior-grid">
+    <div gridster="gridsterOpts" class="interior-grid" ng-show="loaded">
         <ul>
             <li gridster-item="photo" ng-repeat="photo in photosArray" class="card">
                 <img class="materialboxed photo" ng-src="{{photo.photoPath}}">
@@ -28,6 +30,7 @@
     <h2 ng-show="loadedExt">Exterior</h2>
 
     <!-- Only shown while editing -->
+<!--
     <div ng-if="editing">
         <h1>Break</h1>
         <input type="text" name="" id="" ng-model="new.photoPath">
@@ -39,13 +42,18 @@
             </li>
         </ul>
     </div>
+-->
+
 
     <!-- Exterior Grid dont touch -->
-    <div gridster="gridsterOptsExt">
+    <div gridster="gridsterOptsExt" ng-show="loadedExt">
         <ul>
             <li gridster-item="photo" ng-repeat="photo in photosExtArray" class="card">
-                <img class="materialboxed photo" ng-src="{{photo.photoPath}}">
+                <img class="materialbox photo" ng-src="{{photo.photoPath}}">
             </li>
         </ul>
     </div>
+
 </div>
+
+
